          build dependency on the Jansson JSON library.
        - For links, the "parallel cables" action now builds a new link
          (instead of modifying the original link).
        - The summary tabs for normal surfaces and hypersurfaces now split out
          separate counts for non-embedded (immersed and/or singular)
          surfaces and hypersurfaces.
    UTILITIES:
        dgt, katie:
            - The DGT utility has been renamed to Katie.
        regina-engine-config:
            - Made more robust, and removed obsolete options (--exec-prefix,
              and the option to set --prefix to a custom directory).
        regina-helper:
            - New command-line tool for performing miscellaneous tasks.
        retriangulate:
            - New command-line options --all, --classical and --virtual.
        tricensus:
            - Renamed option --tetrahedra to --top, with aliases --triangles,
              --tetrahedra and --pentachora.
            - New option --regina to output Regina data files (the default).
            - New option --dim3 for dimension 3 (the default).
            - Fixed a race condition with --threads where the number of
              triangulations reported on the console could be wrong (although
              the actual list of triangulations in the output file was correct).
        tricensus, retriangulate:
            - Ported the handling of command-line options from Popt to
              GNU getopt_long().  This removes the build dependency on Popt.
    TEST SUITE:
        - Ported the C++ test suite to use the GoogleTest framework (which is
          included with Regina's sources).  This removes the build dependency
          on CppUnit.

Version 7.3.1  [ 11 July, 2025 ]

    GENERAL:
        - Service release to fix some important bugs, and to support
          Python 3.12 and later.
        - This release requires Python 3.7 or newer (i.e., Python 3.6 is
          no longer supported).